--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -62,8 +62,6 @@
 
 
 
-
-
 /* Our stuff - SDLC */
 
 .countriesMap  {
@@ -78,14 +76,18 @@ body {
 
 a,
 a:visited {
-  color: #8d0f3f;
-  text-decoration: none;
+
+	color: #365594; /* #1F3165 */
+	text-decoration-line: underline;
+	/*text-decoration-style: dotted;
+	text-decoration-color: #1F3165;*/
 }
 
 a:hover,
 a:focus {
-  color: #f6ae64;
-  text-decoration: underline;
+  	/*color: #f6ae64;
+	text-decoration-style: solid;*/
+
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -95,7 +97,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: 1.1;
 }
 
-
+h1 small,h1 .small,h2 small,h2 .small,h3 small,h3 .small,h4 small,h4 .small,h5 small,h5 .small,h6 small,h6 .small,.h1 small,.h1 .small,.h2 small,.h2 .small,.h3 small,.h3 .small,.h4 small,.h4 .small,.h5 small,.h5 .small,.h6 small,.h6 .small {
+	color: #555;
+}
 
 .clear {
 	clear: both;
@@ -150,7 +154,7 @@ header .navbar-brand img {
 .header-title {
     font-family: Geneva,Arial,Helvetica,sans-serif;
     margin-top: 38px;
-    color: #8d0f3f;
+    color: #1F3165;
 }
 
 .header-title h4 a {
@@ -167,7 +171,8 @@ header .navbar-brand img {
 
 .header-title h4 a:hover,
 .header-title h4 a:focus {
-    color: #8d0f3f;
+    color: #1F3165;
+
 }
 
 .abe-header-content {
@@ -193,14 +198,15 @@ header .navbar-brand img {
 
 header .navbar-default .navbar-toggle > li > a,
 header .navbar-default .navbar-nav > li > a {
-    color: #8d0f3f;
+    color: #1F3165;
+
 }
 
 header .navbar-default .navbar-toggle > li > a:hover,
 header .navbar-default .navbar-toggle > li > a:focus,
 header .navbar-default .navbar-nav > li > a:hover,
 header .navbar-default .navbar-nav > li > a:focus {
-    background-color: #8d0f3f;
+    background-color: #1F3165;
     color: #fff;
 }
 
@@ -386,13 +392,14 @@ footer > .container {
 	line-height:120%;
 }
 
-#page_footer_right {
+
+.page_footer_right {
 	float: left;
     padding: 25px 30px 0 0;
     text-align: right;
 }
 
-#page_footer_right p {
+.page_footer_right p {
 	line-height: 150%;
     padding: 5px 0 10px;
 	color: #464646;
@@ -400,18 +407,19 @@ footer > .container {
     font-size: 11.5px;
 }
 
-#page_footer_right p a img {
+
+.page_footer_right p a img {
 	margin-left: 5px;
 }
 
-#page_footer_right ul {
+.page_footer_right ul {
 	margin:0;
 	padding:0;
 	list-style:none;
 	text-align: center;
 }
 
-#page_footer_right ul li {
+.page_footer_right ul li {
 	border-bottom: 1px solid #e5e5e5;
 	padding: 4px;
 }
@@ -426,8 +434,9 @@ footer > .container {
 ------------------------------------------------------------ */
 
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
-  background-color: #8d0f3f;
-  border-color: #8d0f3f;
+  background-color: #1F3165;
+  border-color: #1F3165;
+
 }
 
 a.list-group-item,
@@ -440,8 +449,8 @@ a.list-group-item:visited {
 ------------------------------------------------------------ */
 
 .btn-primary {
-  background-color: #8d0f3f;
-  border-color: #8d0f3f;
+  background-color: #1F3165;
+  border-color: #1F3165;
   color: #fff;
 }
 
